--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,19 @@ readme = "README.md"
 authors = [
     { name = "Mickaël Descamps", email = "mickael.descamps@enerfox.fr" }
 ]
-requires-python = ">=3.13"
-dependencies = []
+requires-python = ">=3.10"
+dependencies = [
+    "fastapi>=0.111",
+    "uvicorn[standard]>=0.30",
+    "sqlmodel>=0.0.16",
+    "jinja2>=3.1",
+    "httpx>=0.27",
+    "pydantic-settings>=2.4",
+    "aiofiles>=23.2",
+    "python-multipart>=0.0.9",
+    "sphinx>=7.3",
+    "tomli>=2.0; python_version < '3.11'",
+]
 
 [project.scripts]
 sphinx-server = "sphinx_server:main"
