--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "python-multipart>=0.0.9",
     "sphinx>=7.3",
     "tomli>=2.0; python_version < '3.11'",
+    "pydantic>=2.12.4",
 ]
 
 [project.scripts]
