--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "uvicorn[standard]>=0.30",
     "sqlmodel>=0.0.16",
     "jinja2>=3.1",
+    "itsdangerous>=2.1",
     "httpx>=0.27",
     "pydantic-settings>=2.4",
     "aiofiles>=23.2",
