--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,14 @@ dependencies = [
     "uvicorn[standard]>=0.30",
     "sqlmodel>=0.0.16",
     "jinja2>=3.1",
+    "itsdangerous>=2.1",
     "httpx>=0.27",
     "pydantic-settings>=2.4",
     "aiofiles>=23.2",
     "python-multipart>=0.0.9",
     "sphinx>=7.3",
     "tomli>=2.0; python_version < '3.11'",
+    "pydantic>=2.12.4",
 ]
 
 [project.scripts]
